tests/accept/variable_declartions.ul
void main() {
    // Basic types
    int a;
    float b;
    char c;
    string d;
    boolean e;

    // Array types
    int [10]g;
    float [1] h;
    char[1000] i;
    string[0] j;
    boolean    [10]     k;
}
