tests/reject/bad_mult.ul
void main() {
     int a;
     char x;
     a = x * 1;
}